# summa

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  vite.config.js
Get-Converted-Exams-main/: document_analyser.py
public/python/: document_analyzer.py
rust-wasm/: Cargo.toml  build.sh
rust-wasm/src/: lib.rs
src/: App.tsx
src/components/: ConversionProgress.tsx  DownloadSection.tsx  DragAndDropFile.tsx  ExamRequirements.tsx  ExamSelector.tsx
src/config/: examFormats.ts
src/services/: wasmService.ts
src/types/: exam.ts
src/wasm/pkg/: .gitkeep  exam_converter.js
